# molecule-resolver

./: .gitignore  .readthedocs.yaml  .spr.yml  LICENSE.txt  README.md  apply.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: context_lifecycle.md  evidence.md  requirements.txt  scoring.md  search_strategy.md
docs/source/: conf.py  index.rst
molecule_test_set/: benchmark_molecule_names.json  get_data_generate_identifiers.py
moleculeresolver/: SqliteMoleculeCache.py  __init__.py  molecule.py  moleculeresolver.py  rdkitmods.py
moleculeresolver/resolution/: __init__.py  evidence.py  models.py  scorer.py  selector.py
moleculeresolver/services/: __init__.py  base.py  cir_adapter.py  opsin_adapter.py  other_adapters.py  pubchem_adapter.py  registry.py
tests/: benchmark_component_molecules.json  benchmark_component_molecules_iupac.json  get_iupac.py  rdkit_normalization_exceptions.py  responses.json  test_context_lifecycle.py  test_evidence_model.py  test_integration.py  test_integration_upgrade.py  test_scoring_engine.py  test_search_strategy.py  test_service_adapters.py  test_strict_isomer_mode.py  unit_tests.py
