[tool.poetry]
name = "molecule-resolver"
version = "0.1.0"
description = "A package to use several web services to find molecule structures, synonyms and CAS."
authors = [
    "Simon Muller <simon.mueller@tuhh.de>",
    "Kobi Felton <kobi.c.f@gmail.com>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "moleculeresolver" }]

[tool.poetry.dependencies]
python = "^3.9"
prompt-toolkit = "^3.0.39"
regex = "^2023.10.3"
rdkit = "^2023.3.3"
requests = "^2.31.0"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
urllib3 = "^2.0.6"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
